team-app/main/default/objects/GTM_Team_Access__c/GTM_Team_Access__c.object-meta.xml
<CustomObject>
    <description>Per-user GTM - Team Johnson role, tab, and activity grants edited on the Admin tab. Salesforce app access still comes from GTM_Team_Johnson_Access / GTM_Team_Johnson_Viewer.</description>
    <label>GTM Team Access</label>
    <nameField>
        <displayFormat>GTA-{000000}</displayFormat>
        <label>Access Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GTM Team Access</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>