team-app/main/default/objects/GTM_Team_Access__c/fields/Activities__c.field-meta.xml
<CustomField>
    <fullName>Activities__c</fullName>
    <description>Semicolon-separated activity keys this user may perform (for example tick_call;pricing_review). Edited as checkboxes on the Admin tab after a role is chosen.</description>
    <inlineHelpText>Activities this user may perform. Role presets a starting set; you can still add or remove checkboxes.</inlineHelpText>
    <label>Activities</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>