team-app/main/default/objects/GTM_Team_Access__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>App role chosen on the Admin tab: Admin, Leader, or Team_Member. A role applies checkbox defaults; the saved Tabs__c and Activities__c values are the actual grant.</description>
    <inlineHelpText>Admin, Leader, or Team member. Changing the role resets tab and activity defaults; you can still edit the checkboxes after.</inlineHelpText>
    <label>Role</label>
    <length>40</length>
    <type>Text</type>
</CustomField>