team-app/main/default/objects/GTM_Team_Access__c/fields/Tabs__c.field-meta.xml
<CustomField>
    <fullName>Tabs__c</fullName>
    <description>Semicolon-separated tab keys this user may use in GTM - Team Johnson (for example main;sales_performance;admin). Edited as checkboxes on the Admin tab after a role is chosen.</description>
    <inlineHelpText>Tabs this user can use. Role presets a starting set; uncheck any tab to hide it from their grant.</inlineHelpText>
    <label>Tabs</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>