team-app/main/default/objects/GTM_Team_Access__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Salesforce user this Team Johnson access grant belongs to. One grant row per user, upserted on User_Key__c.</description>
    <inlineHelpText>User who can open GTM - Team Johnson with the role and checkboxes on this row.</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>GTM Team Access</relationshipLabel>
    <relationshipName>GTM_Team_Access</relationshipName>
    <type>Lookup</type>
</CustomField>