team-app/main/default/objects/GTM_Team_Access__c/fields/User_Key__c.field-meta.xml
<CustomField>
    <fullName>User_Key__c</fullName>
    <description>18-character Salesforce user Id used as the unique upsert key for this grant. Mirrors User__c so Admin save can update an existing row without a second lookup.</description>
    <externalId>true</externalId>
    <inlineHelpText>User Id stored so each person has at most one Team Johnson access grant.</inlineHelpText>
    <label>User Key</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>